# trust-tee

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: bench.yml  miri.yml  valgrind.yml
benches/: contention.rs  launch_bench.rs  local_shortcut.rs  perf_latch.rs  perf_local.rs  perf_pinned_remote.rs
examples/: basic_usage.rs  bincode.rs  latch.rs  launch_test.rs  local_trustee.rs  perf_pinned_remote.rs  pinning.rs  recursive_apply.rs  remote_complex.rs  remote_simple.rs  remote_trustee.rs
src/: affinity.rs  fiber.rs  latch.rs  lib.rs  slots.rs  trust.rs  trustee.rs
src/ring/: mod.rs  spsc.rs  wait.rs
src/runtime/: common.rs  mod.rs  runtime.rs  serialization.rs  slots.rs
src/single_thread/: latch.rs  launch.rs  mod.rs
src/trust/: common.rs  facade.rs  local.rs  mod.rs  remote.rs
src/trustee/: local.rs  mod.rs  remote.rs
src/util/: affinity.rs  fiber.rs  latch.rs  mod.rs  thread_id.rs  wait.rs
tests/: blocking_check.rs  launch_concurrency.rs
