[package]
name = "trust-tee"
version = "0.1.0"
edition = "2024"
authors = ["isofinly isofinly.business@icloud.com"]
license = "MIT"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
may = { version = "0.3.51" }
smallvec = "1.15.1"
crossbeam-queue = "0.3.12"
libc = "0.2"
branches = "0.3.0"

[features]
default = []
serde = ["dep:serde", "dep:bincode"]

[dependencies.bincode]
version = "2.0.1"
optional = true
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"

[[bench]]
name = "contention"
harness = false

[[bench]]
name = "perf_local"
harness = false

[[bench]]
name = "perf_latch"
harness = false

[[bench]]
name = "perf_pinned_remote"
harness = false
