[package]
name = "trust-tee"
version = "0.1.0"
edition = "2024"
authors = ["isofinly isofinly.business@icloud.com"]
license = "MIT"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
may = { version = "0.3.51" }
smallvec = "1.15.1"
libc = "0.2"
sptr = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.0.1" }


[features]
default = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"

[[bench]]
name = "contention"
harness = false

[[bench]]
name = "perf_local"
harness = false

[[bench]]
name = "perf_latch"
harness = false

[[bench]]
name = "perf_pinned_remote"
harness = false
